force-app/main/default/objects/OneCRM__ScheduleLog__c/OneCRM__ScheduleLog__c.object-meta.xml
<CustomObject>
    <label>ScheduleLog</label>
    <nameField>
        <label>Sche Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScheduleLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>