force-app/main/default/objects/OneCRM__ScheduleLog__c/fields/OneCRM__Log_Text__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Log_Text__c</fullName>
    <label>Log_Text</label>
    <type>TextArea</type>
</CustomField>