force-app/main/default/objects/OneCRM__ScheduleLog__c/fields/OneCRM__Recipient_Ids__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Recipient_Ids__c</fullName>
    <label>Recipient Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>