force-app/main/default/objects/OneCRM__ScheduleLog__c/fields/OneCRM__Schedule__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule</label>
    <referenceTo>OneCRM__Schedule__c</referenceTo>
    <relationshipLabel>ScheduleLogs</relationshipLabel>
    <relationshipName>ScheduleLogs</relationshipName>
    <type>Lookup</type>
</CustomField>