force-app/main/default/objects/OneCRM__ScheduleLog__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>